--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,261 @@
+/*
+ * @style for AbuduChoy
+ */
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.pages .row {
+    margin: 20px 0;
+}
+
+.row::after {
+    content: "";
+    clear: both;
+    display: block;
+}
+
+[class*="col-"] {
+    float: left;
+    padding: 15px;
+}
+
+/* For desktop: */
+.col-1 {
+    width: 8.33%;
+}
+
+.col-2 {
+    width: 16.66%;
+}
+
+.col-3 {
+    width: 25%;
+}
+
+.col-4 {
+    width: 33.33%;
+}
+
+.col-5 {
+    width: 41.66%;
+}
+
+.col-6 {
+    width: 50%;
+}
+
+.col-7 {
+    width: 58.33%;
+}
+
+.col-8 {
+    width: 66.66%;
+}
+
+.col-9 {
+    width: 75%;
+}
+
+.col-10 {
+    width: 83.33%;
+}
+
+.col-11 {
+    width: 91.66%;
+}
+
+.col-12 {
+    width: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+
+    /* For mobile phones: */
+    [class*="col-"] {
+        width: 100%;
+    }
+}
+
+
 body {
-    background-color: aqua;
+    background-color: rgb(213, 206, 206);
+    font-family: Arial, Helvetica, sans-serif;
+    color: #000;
+}
+
+a {
+
+    text-decoration: none !important;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.clear {
+    float: none;
+    clear: both;
+}
+
+header {
+    background-image: linear-gradient(to top, rgb(243, 31, 82), rgb(224, 84, 107));
+    position: fixed;
+    /** background: rgb(30, 2, 110); **/
+    top: 0;
+    left: 0;
+    padding: 0 80px;
+    width: 100%;
+    box-sizing: border-box;
+    margin: auto;
+    overflow: hidden;
+    list-style-type: none;
+    z-index: 1;
+}
+
+
+header nav {
+    float: right;
+}
+
+header nav ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+header nav ul li {
+    list-style: none;
+
+}
+
+header nav ul li a {
+    color: #fff;
+    height: 60px;
+    line-height: 60px;
+    padding: 0 20px;
+    text-decoration: none;
+    display: block;
+}
+
+header nav ul li a:hover,
+header nav ul li a.active {
+    color: #ffffff;
+    background-image: linear-gradient(to top, #79b8d9, #a6cfe6);
+
+}
+
+.menu-toggle {
+
+    color: #fff;
+    float: right;
+    line-height: 50px;
+    cursor: pointer;
+    display: none;
+}
+
+header .logo {
+    color: #fff;
+    height: 60px;
+    line-height: 60px;
+    font-size: 24px;
+    float: left;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+/** RESPONSIVE HEADER**/
+
+@media (max-width : 830px) {
+    header {
+        padding: 0 30px;
+    }
+
+    .menu-toggle {
+        display: block;
+
+    }
+
+    .menu-toggle i {
+        font-size: 24px;
+    }
+
+    header nav {
+        position: fixed;
+        width: 100%;
+        height: calc(100vh - 50px);
+        background: #333;
+        top: 50px;
+        left: -100%;
+
+        transition: 0.5s all;
+    }
+
+    header nav.active {
+        left: 0;
+    }
+
+    header nav ul {
+        display: block;
+        text-align: center;
+    }
+
+    header nav ul li a {
+        border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+        color: #fff;
+    }
+
+
+
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 730px) {}
+
+
+section {
+    /* padding: 30 0 30 0; */
+    margin: 5px;
+    /* height: 420px; */
+    /* background: #db1b3e; */
+}
+
+section#home {
+    margin-top: 20px;
+    padding: 50px;
+    /* background-image: url("https://abuduchoy.my.id/images/281454405_5175711389156874_6556101183153490453_n.jpg"); */
+    background-color: #f19a9a;
+    height: 540px;
+    background-position-x: right;
+    background-position-y: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+
+}
+
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: rgb(43, 32, 32);
+}
+
+.pages {
+    max-width: 1200px;
+    margin: 0 auto 0 auto;
+    padding-top: 60px;
+    background-color: white;
+    position: relative;
+    overflow: hidden;
+
 }
